--- a/style/style.css
+++ b/style/style.css
@@ -114,7 +114,7 @@ body {
 .header-image {
     width: 100%;
     height: 140px;
-    background-image: url("img/cabecalho.png");
+    background-image: url("../img/cabecalho.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
