--- a/style/style.css
+++ b/style/style.css
@@ -794,7 +794,7 @@ textarea:invalid:focus {
 }
 
 .footer-credits strong {
-    color: #4dabf7;
+    color: var(--bg-white);
     font-weight: 600;
 }
 
